# ok-path

./: .clang-format  README.md  ok_path.c  ok_path.h
test/: CMakeLists.txt  Makefile  README.md  main.c
